landing page updated

--- a/landing_page.html
+++ b/landing_page.html
@@ -98,8 +98,8 @@
       This is just what I think. A lot of people may have different opinion regarding it, especially the fact that people's lives are publicised.
       I understand that, but however, I decided to make it my portfolio project for <a href="https://www.holbertonschool.com">Holberton School</a>
       Here is the github repo containing the project <a href="https://github.com/Nkemjika1divine/PeopleBase">PeopleBase</a>. Check it out.
-      Also check me out on <a href="https://github.com/Nkemjika1divine/PeopleBase">Twitter</a>, <a href="https://github.com/Nkemjika1divine/PeopleBase">LinkedIn</a>,
-      and <a href="https://github.com/Nkemjika1divine/PeopleBase">Github</a>.
+      Also check me out on <a href="https://twitter.com/_nkemdivine_">Twitter</a>, <a href="https://linkedin.com/in/divine-anizoba-abb966268">LinkedIn</a>,
+      and <a href="https://github.com/Nkemjika1divine">Github</a>.
     </p>
   </section>
 </body>
