--- a/landing_page.html
+++ b/landing_page.html
@@ -12,7 +12,7 @@
       padding: 0;
     }
     .hero {
-      background-image: url("images/PeopleBase_logo.png"); /* Replace with your image path */
+      background-image: url("images/pbfind.png"); /* Replace with your image path */
       background-size: cover;
       background-position: center;
       height: 500px;
@@ -73,8 +73,8 @@
     <a href="#about">About</a>
     <a href="https://github.com/Nkemjika1divine/PeopleBase">Try the App</a>  </header>
   <section class="hero">
-    <h1>Your Project Name</h1>
-    <p>A one-line description of your project</p>
+    <h1>PeopleBase</h1>
+    <p>Know Them Before You Meet Them...</p>
   </section>
   <section class="features" id="features">
     <div class="feature">
