landing page updated

--- a/landing_page.html
+++ b/landing_page.html
@@ -80,12 +80,12 @@
     <div class="feature">
       <img src="images/pbcreate.png" alt="Feature 1">
       <h3>Create</h3>
-      <p>Description of Feature 1</p>
+      <p>This is a feature that enables a new entry to be made.</p>
     </div>
     <div class="feature">
       <img src="images/pbfind.png" alt="Feature 2">
       <h3>Find</h3>
-      <p>Description of Feature 2</p>
+      <p>This is a feature that enables the user to find anyone using their email or their phone number</p>
     </div>
     
   </section>
