--- a/landing_page.html
+++ b/landing_page.html
@@ -12,7 +12,7 @@
       padding: 0;
     }
     .hero {
-      background-image: url("images/pbfind.png"); /* Replace with your image path */
+      background-image: url("images/PeopleBase_logo_filtered.png"); /* Replace with your image path */
       background-size: cover;
       background-position: center;
       height: 500px;
